objects/vlocity_cmt__Error_Code__c.object
<CustomObject>
    <description>DEPRECATED. Use ErrorCode__c</description>
    <fields>
        <fullName>vlocity_cmt__Error_Code__c</fullName>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Namespace__c</fullName>
        <label>Namespace</label>
        <referenceTo>vlocity_cmt__Error_Code_Namespace__c</referenceTo>
        <relationshipLabel>Error Codes</relationshipLabel>
        <relationshipName>Namespace</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Semantics__c</fullName>
        <label>Semantics</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not an error</fullName>
                </value>
                <value>
                    <fullName>Retriable</fullName>
                </value>
                <value>
                    <fullName>Fatal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Error Code</label>
    <nameField>
        <label>Error Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>